# easy-framework

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.adoc  README.md  _index.adoc  _index.adoc.in  groups  project.config
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: CuTest.1435480227161.pdom  eFrameworkSharedLib.1435480214072.pdom  eFrameworkTest.1435480274072.pdom  language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 2.snap  3.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/CuTest/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/CuTest/.indexes/65/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/CuTest/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkSharedLib/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkSharedLib/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkSharedLib/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkTest/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkTest/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/eFrameworkTest/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: .markers.snap  2.tree  3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: eFrameworkTest.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/history/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: _1.fdx  _1.frq  _1.nrm  _1.tii  _1.tis  segments_2
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/6/27/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.ubuntu_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
CuTest/: .cproject  .project
Docs/: LinkerScript-What-It-Is.adoc  ParsingMap.md
Docs/assets/: example.c  exampleldscript.ld  linkerscript.ld
Inc/: eOsal.h  eTask.h  eTaskId.h
Scripts/x86_gcc/: linkerscript.ld
Src/: eOsal.c  eTask.c
Test/: .project  CMakeLists.txt  main.cpp  test_elogger.cpp  test_emsgbus.cpp
Test/Lib/CuTest/: CuTest.c  CuTest.h
Test/TestModule/Inc/: eTestModule.h
Test/TestModule/Src/: eTestModule.c
Test/TestSuit/eFramworkTest/: .cproject  .project
Test/TestSuit/eFramworkTest/Src/: eFrameworkTestSuit.c  eFramworkTestMain.c
Test/eTestMain/: eMain.c
docs/: antora.yml
docs/Post/: LinkerScript-What-It-Is.adoc  example_posix.c
docs/modules/ROOT/pages/: eframework-my-embedded-framework.adoc  index.adoc
eApp/: eMainApp.c
eDocs/: eFramework.eap
eFrameWork/: .cproject  .gitignore
eFrameWork/Inc/: eLogger.h  eMem.h  eMsgBus.h  eOsal.h  eOsalTaskHandle.h  eTask.h  eTaskId.h  eTimer.h  eTimerHandler.h
eFrameWork/Lib/: .gitignore
eFrameWork/Lib/LibeFrameworkShare/: .cproject  .project
eFrameWork/Src/: eLogger.c  eMem.c  eMem_LeakDetect_Impl.c  eMem_LeakDetect_Impl.h  eMsgBus.c  eOsal.c  eOsalTaskHandle.c  eTask.c  eTimerHandler.c
eFrameWork/TestSuit/eFramworkTest/: .cproject  .project
eFrameWork/TestSuit/eFramworkTest/Src/: eFrameworkTestSuit.c  eFramworkTestMain.c
eFrameWork/eInclude/: eError.h  eInclude.h  eTypes.h
eFrameWork/eMainTest/: eTestMain.c
eFrameworkTestMain/: .cproject
eFrameworkTestMain/TestModule/Inc/: eTestModule.h
eFrameworkTestMain/TestModule/Src/: eTestModule.c
eFrameworkTestMain/eTestMain/: eMain.c
eInclude/: eError.h  eInclude.h  eMacro.h  eTypes.h
